k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventsc-ingress
  namespace: eventsc
spec:
  rules:
    - host: eventsc.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 8080
